<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.SimpleWidget.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@drawable/rounded_bg"
    android:theme="@style/Theme.SimpleWidget.AppWidgetContainer"
    app:barrierAllowsGoneWidgets="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgWeather"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="start"
            app:srcCompat="@drawable/baseline_wb_sunny_24"
            tools:srcCompat="@drawable/baseline_wb_sunny_24" />

        <TextView
            android:id="@+id/tvCelcius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/number_celcius"
            android:textSize="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCelciusMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_celcius_max"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvCelciusLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_celcius_low"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/town"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/indicator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv7pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/estimate_celcius_7pm" />

                <ImageView
                    android:id="@+id/img7pm"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end"
                    android:src="@drawable/baseline_wb_sunny_24" />

                <TextView
                    android:id="@+id/tvEstimate4pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/estimate_text_4pm" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv6pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/estimate_celcius_6pm" />

                <ImageView
                    android:id="@+id/img6pm"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end"
                    android:src="@drawable/baseline_wb_sunny_24" />

                <TextView
                    android:id="@+id/tvEstimate5pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/estimate_text_5pm" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv5pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/estimate_celcius_7pm" />

                <ImageView
                    android:id="@+id/img5pm"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end"
                    android:src="@drawable/baseline_wb_sunny_24" />

                <TextView
                    android:id="@+id/tvEstimate6pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/estimate_text_6pm" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv4pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/estimate_celcius_7pm" />

                <ImageView
                    android:id="@+id/img4pm"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end"
                    android:src="@drawable/baseline_wb_sunny_24" />

                <TextView
                    android:id="@+id/tvEstimate7pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/estimate_text_7pm" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="bottom"
        android:background="@drawable/image_with_border"
        app:srcCompat="@drawable/image_with_border" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTuesdayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/day_one" />

            <ImageView
                android:id="@+id/imgTuesday"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:src="@drawable/baseline_wb_sunny_24" />

            <TextView
                android:id="@+id/tvTuesdayCelcius"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right|end"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                android:text="@string/estimate_celcius_4pm" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvWednesdayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/day_two" />

            <ImageView
                android:id="@+id/imgWednesday"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:src="@drawable/baseline_wb_sunny_24" />

            <TextView
                android:id="@+id/tvWednesdayCelcius"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right|end"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                android:text="@string/estimate_celcius_4pm" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvThursdayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/day_three" />

            <ImageView
                android:id="@+id/imgThursday"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:src="@drawable/baseline_wb_sunny_24" />

            <TextView
                android:id="@+id/tvThursdayCelcius"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right|end"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                android:text="@string/estimate_celcius_4pm" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>